--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,25 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "cSpell.words": [
+        "agba",
+        "agbalu",
+        "Agbalumo",
+        "Arther",
+        "benuta",
+        "caraa",
+        "carra",
+        "Carracompany",
+        "Cormonat",
+        "DESENIO",
+        "DIPTYQUE",
+        "Disponsible",
+        "Insipired",
+        "magneta",
+        "monsetra",
+        "monsetrate",
+        "Pinerset",
+        "Terma",
+        "WESTWING",
+        "wght"
+    ]
 }
